syntax = "proto3";

option csharp_namespace = "Power.BasicManagement.Application.GrpcService.PermissionGrpcService";

package PermissionGrpcService;

message RequestCurrentUserObjectPermission{
	string appliedObjectID = 1;
}

message ResponseCurrentUserObjectPermission{
	repeated string permissionStr = 1;
}

service PermissionGrpcService {
	rpc GetCurrentUserAppliedObjectPermission (RequestCurrentUserObjectPermission) returns (ResponseCurrentUserObjectPermission);
}